--- a/static/index.html
+++ b/static/index.html
@@ -44,7 +44,7 @@
 
     <body>
         <div id="container" class="u-fit">
-            <div class="o-wrapper--panel">
+            <!-- <div class="o-wrapper--panel">
                 <div class="btn u-color--white" data-value="100">
                     100'000
                 </div>
@@ -57,7 +57,7 @@
                 <div class="btn u-color--white" data-value="1000">
                     1'000'000
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <script type="text/javascript" src="./bundle.js"></script>
